# homeassistant-tui

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FUTURE.md  README.md  primer.md
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/skills/insta-review/: SKILL.md
.claude/skills/release/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
config/: config.example.yaml  dashboards.example.yaml
docs/: configuration.md  dashboard-yaml.md
docs/superpowers/plans/: 2026-05-20-card-improvements.md
docs/superpowers/specs/: 2026-05-20-card-improvements-design.md
src/: actions.rs  app.rs  app.rs.bak  event.rs  main.rs
src/config/: load.rs  mod.rs  persist.rs
src/dashboard/: editor.rs  layout.rs  mod.rs  persist.rs  query.rs
src/ha/: client.rs  mod.rs  protocol.rs  registry.rs  rest.rs
src/local_media/: linux.rs  macos.rs  mod.rs
src/screens/: dashboard.rs  editor.rs  entities.rs  instances.rs  mod.rs
src/ui/: format.rs  mod.rs  template.rs  theme.rs
src/ui/widgets/: big_text.rs  card_attribute_list.rs  card_clock.rs  card_entity.rs  card_entity_list.rs  card_gauge.rs  card_graph.rs  card_image.rs  card_media_player.rs  card_sparkline.rs  card_statistics.rs  card_text.rs  card_toggle.rs  card_weather.rs  entity_detail.rs  entity_list.rs  entity_modal.rs  help.rs  input_modal.rs  instance_bar.rs  instance_form.rs  instances_screen.rs  mod.rs
src/util/: bootstrap.rs  history.rs  logging.rs  mod.rs  paths.rs  update_check.rs
