[package]
name = "ha-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Home Assistant — multi-instance dashboards with mouse + keyboard"
license = "MIT"

[[bin]]
name = "ha-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
color-eyre = "0.6"
directories = "5"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
insta = "1"
tempfile = "3"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
