[package]
name = "ha-tui"
version = "0.4.0"
edition = "2021"
description = "Terminal UI for Home Assistant — multi-instance dashboards with mouse + keyboard"
license = "MIT"

[[bin]]
name = "ha-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
tui-big-text = "0.8"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures = "0.3"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
# directories dep removed in favor of util::paths (XDG-style on macOS too)
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "stream"] }
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
tui-piechart = "0.3"
image = "0.25"

[dev-dependencies]
insta = "1"
tempfile = "3"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
